style.css
* {
    box-sizing: border-box;
}

.container{
    border: 4px solid lightgray;
    padding: 24px 24px 0 24px;
}

.row{
    width: 100%;
    max-width: 600px;
    display: flex;
    justify-content: space-between;
}

.box{
    border: 4px solid lightgray;
    margin-bottom: 24px;
}

.box-small{
    height: 50px;
}
.box-tiny{
    width:30% ;
    height:50px;
}

.box-wrapper{
    width: 50%;
    padding-right: 24px;
}

.tiny-wrapper{
    display: flex;
    justify-content: space-between;
}

.box-large{
    width: 45%;
}

